[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/MainMenu/LoadWorldScreen.gd" type="Script" id=1]

[node name="LoadWorldScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( -1436.38, -80 )

[node name="TitleLabel" type="Label" parent="Container"]
margin_right = 784.0
margin_bottom = 25.0
text = "Load an existing world"

[node name="WorldSelector" type="OptionButton" parent="Container"]
margin_top = 33.0
margin_right = 784.0
margin_bottom = 70.0

[node name="FeedbackLabel" type="Label" parent="Container"]
margin_top = 78.0
margin_right = 784.0
margin_bottom = 103.0

[node name="ButtonsContainer" type="HBoxContainer" parent="Container"]
margin_top = 111.0
margin_right = 784.0
margin_bottom = 148.0

[node name="PlayButton" type="Button" parent="Container/ButtonsContainer"]
margin_right = 232.0
margin_bottom = 37.0
disabled = true
text = "Play selected world"

[node name="RenameButton" type="Button" parent="Container/ButtonsContainer"]
margin_left = 240.0
margin_right = 353.0
margin_bottom = 37.0
disabled = true
text = "Rename"

[node name="DeleteButton" type="Button" parent="Container/ButtonsContainer"]
margin_left = 361.0
margin_right = 454.0
margin_bottom = 37.0
disabled = true
text = "Delete"

[node name="CancelButton" type="Button" parent="Container/ButtonsContainer"]
margin_left = 462.0
margin_right = 557.0
margin_bottom = 37.0
text = "Cancel"

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0
window_title = "Deleting a world"
dialog_text = "<text set by code when the delete button is pressed>"
dialog_autowrap = true

[node name="RenameDialog" type="ConfirmationDialog" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0
window_title = "Renaming a world"

[node name="MarginContainer" type="MarginContainer" parent="RenameDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -69.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="RenameDialog/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 732.0
margin_bottom = 335.0

[node name="Label" type="Label" parent="RenameDialog/MarginContainer/VBoxContainer"]
margin_right = 712.0
margin_bottom = 25.0
text = "New name for world:"

[node name="WorldNameEdit" type="LineEdit" parent="RenameDialog/MarginContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 712.0
margin_bottom = 78.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="Container/WorldSelector" to="." method="_on_WorldSelector_item_selected"]
[connection signal="pressed" from="Container/ButtonsContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Container/ButtonsContainer/RenameButton" to="." method="_on_RenameButton_pressed"]
[connection signal="pressed" from="Container/ButtonsContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="Container/ButtonsContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="confirmed" from="DeleteConfirmationDialog" to="." method="_on_DeleteConfirmationDialog_confirmed"]
[connection signal="confirmed" from="RenameDialog" to="." method="_on_RenameDialog_confirmed"]
[connection signal="text_changed" from="RenameDialog/MarginContainer/VBoxContainer/WorldNameEdit" to="." method="_on_WorldNameEdit_text_changed"]
[connection signal="text_entered" from="RenameDialog/MarginContainer/VBoxContainer/WorldNameEdit" to="." method="_on_WorldNameEdit_text_entered"]
